--- a/shopping-app/package.json
+++ b/shopping-app/package.json
@@ -32,9 +32,11 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@tippyjs/react": "^4.2.6",
     "@types/react-helmet": "^6.1.7",
+    "@types/uuid": "^9.0.5",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
@@ -50,6 +52,7 @@
     "sass": "^1.68.0",
     "styled-components": "^6.0.8",
     "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2",
     "zod": "^3.22.4"
   },
