--- a/shopping-app/package.json
+++ b/shopping-app/package.json
@@ -51,6 +51,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.68.0",
     "styled-components": "^6.0.8",
+    "swiper": "^10.3.1",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.1",
     "yup": "^1.3.2",
