--- a/shopping-app/package.json
+++ b/shopping-app/package.json
@@ -29,13 +29,17 @@
     "@mui/material": "^5.14.12",
     "@mui/x-date-pickers": "^6.16.0",
     "@mui/x-date-pickers-pro": "^6.16.0",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^1.8.1",
+    "@tanstack/react-query": "^5.7.0",
+    "@tanstack/react-query-devtools": "^5.7.0",
     "@tippyjs/react": "^4.2.6",
     "@types/react-helmet": "^6.1.7",
     "@types/uuid": "^9.0.5",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
@@ -53,7 +57,6 @@
     "sass": "^1.68.0",
     "styled-components": "^6.0.8",
     "swiper": "^10.3.1",
-    "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.1",
     "yup": "^1.3.2",
     "zod": "^3.22.4"
@@ -65,6 +68,7 @@
     "@testing-library/user-event": "^14.2.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/redux-persist": "^4.3.1",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.0.0",
